 $Id: ChangeLog,v 1.131.2.25.2.14 2009/01/08 12:36:44 uehira Exp $

2009-01-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : added MKSWAPS.
	* src/recvt.c : bug fixed in send_req(). SWAPS --> MKSWAPS.
	* src/shmdump.c : fixed bugs?
	* prog/ee_manager : tail +5 --> tail -n +5 (for Linux system)

2008-12-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.89 release.
	* src/shmdump.c : fixed bugs.

2008-12-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* getopt() : EOF --> -1

2008-12-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2fix() : use win_chheader_info().
	* src/recvt : 64 bit clean?
	* Version 2.0.3 released.

2008-12-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.88 release.
	* src/events.c : added NetBSD specific macro.
	* src/recvnmx.c, src/recvs.c, src/recvstatus.c, src/recvstatus2.c,
	  src/recvt.c, src/relay.c, src/send_raw.c, src/send_raw_old.c,
 	  src/sends.c :
	   include arpa/inet.h if exists.
	* configure.in : check arpa/inet.h.
	
2008-11-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : introduced TIME_OFFSET.
	* src/winlib.h : all SR_MON definition moved to this file.
	* src/winlib.c : added win_chheader_info().

2008-11-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c : added Shm_init().
	* src/winlib.c : added WIN_version().

2008-11-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wck : 64 bit clean.
	* Version 2.0.2 released.

2008-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.98-LIB release.
	* install include files.
        * src/winlib.h : remove LongFromBigEndian(a) macro.
	* src/winlib.c : read_onesec_win() is moved from src/win_system.c.
	* dewin.c, wadd.c, wadd2.c, wck.c, wck_wdisk.c
	               : replace read_data() with read_onesec_win().

2008-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* suppress warnings.
	* MF Version 1.1.97-LIB release.
	* src/recvs.c, src/sends.c : use library (src/win_log.c).	